--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,10 +26,13 @@ project(mylib VERSION 0.0.1)
 set(as_subproject mylib)
 
 macro(find_package)
-    if(NOT ${ARG0} IN_LIST as_subproject)
+    if(NOT ${ARGV0} IN_LIST as_subproject)
         _find_package(${ARGV})
     endif()
 endmacro()
+
+# Must enable test to use ctest
+enable_testing()
 
 add_subdirectory(mylib)
 add_subdirectory(mybin)
