Fix mylib public headers path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ endif()
 ###############################################################################
 # Create Project
 ###############################################################################
-project(mylib VERSION 0.0.1)
+project(my-big-projec VERSION 0.0.1)
 
 set(as_subproject mylib)
 
