rename targets and better project structure

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
             cd build
             cmake ..
             make
+            make test
             mkdir pkg
             make DESTDIR=pkg install
 
