--- a/libhello/package/archlinux/PKGBUILD.in
+++ b/libhello/package/archlinux/PKGBUILD.in
@@ -12,13 +12,13 @@ makedepends=('cmake>=3.11.0')
 checkdepends=('catch2')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/tarberd/cmake-project-template/archive/%sha%.tar.gz")
 md5sums=('SKIP')
-# %md5sums%
 
 build() {
 	cd "cmake-project-template-%sha%/libhello"
   cmake \
     -DBUILD_TESTS=false \
-    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_INSTALL_PREFIX='/usr' \
+    -DCMAKE_INSTALL_LIBDIR='lib' \
     -DBUILD_SHARED_LIBS=on \
     -DCMAKE_BUILD_TYPE=Release \
     .
@@ -29,9 +29,6 @@ check() {
 	cd "cmake-project-template-%sha%/libhello"
   cmake \
     -DBUILD_TESTS=true \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DBUILD_SHARED_LIBS=on \
-    -DCMAKE_BUILD_TYPE=Release \
     .
   make
 	make test
