--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - run:
           name: prepare
           command: |
-            pacman -Syu --needed --noconfirm base-devel git ssh cmake catch2
+            pacman -Syu --needed --noconfirm --noprogressbar base-devel git ssh cmake catch2
       - checkout
       - run:
           name: build
@@ -43,7 +43,7 @@ jobs:
       - run:
           name: make-package
           command: |
-            pacman -S --noconfirm devtools
+            pacman -S --noconfirm --noprogressbar devtools
             cd libhello/package/archlinux/source-package
             sudo -u builder extra-x86_64-build
   build:
@@ -103,5 +103,5 @@ workflows:
  version: 2
  Example_Workflow:
    jobs:
-     - build
+     - archlinux
 
