--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,15 @@ jobs:
             sed --in-place 's/^#\s*\(%wheel\s\+ALL=(ALL)\s\+NOPASSWD:\s\+ALL\)/\1/' /etc/sudoers
             sed --in-place 's/\(root\s\+ALL=(ALL)\)/\1 NOPASSWD:/' /etc/sudoers
             useradd -m -G wheel builder
-      - checkout
+      - checkout:
+          path: /home/builder/project
+      - run:
+          name: fix-ownership
+          working_directory: /home/builder
+          command: chown -R builder project
       - run:
           name: build
+          working_directory: /home/builder/project
           command: |
             mkdir build
             cd build
@@ -27,6 +33,7 @@ jobs:
             make
       - run:
           name: test
+          working_directory: /home/builder/project
           command: |
             cd build
             cmake \
@@ -39,15 +46,17 @@ jobs:
             make test
       - run:
           name: generate-source-package
+          working_directory: /home/builder/project
           command: |
             cd libhello/package/archlinux
-            ./configure.sh
+            sudo -u builder ./configure.sh
       - run:
-          name: make-package
+          name: build-source-package
+          working_directory: /home/builder/project
           command: |
             pacman -S --noconfirm --noprogressbar devtools
             cd libhello/package/archlinux/source-package
-            sudo -u builder extra-x86_64-build
+            sudo -u builder makepkg
   build:
     docker:
       - image: alpine:edge
