--- a/.builds/archlinux.yml
+++ b/.builds/archlinux.yml
@@ -10,7 +10,7 @@ sources:
   - https://github.com/tarberd/cmake-project-template
 tasks:
   - prepare-builder-user: |
-      sed --in-place 's/^#\s*\(%wheel\s\+ALL=(ALL)\s\+NOPASSWD:\s\+ALL\)/\1/' /etc/sudoers
+      sudo sed --in-place 's/^#\s*\(%wheel\s\+ALL=(ALL)\s\+NOPASSWD:\s\+ALL\)/\1/' /etc/sudoers
       echo "tester ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoer
       useradd -m -G wheel builder
   - build-package: |
