--- a/libhello/package/archlinux/PKGBUILD.in
+++ b/libhello/package/archlinux/PKGBUILD.in
@@ -1,13 +1,13 @@
 # Maintainer: Bernardo Ferrari <bernardo.mferrari@gmail.com>
 
-pkgname=libhello-%branch-name%
+pkgname=libhello%pkgname-sufix%
 pkgver=%pkg-version%
 pkgrel=1
 pkgdesc="Simple hello library with a void hello(std::string) function."
 arch=('x86_64')
 url="https://github.com/tarberd/cmake-project-template"
 license=('GPL')
-depends=('glibc' 'gcc-libs')
+depends=('gcc-libs')
 makedepends=('cmake>=3.11.0')
 checkdepends=('catch2')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/tarberd/cmake-project-template/archive/%sha%.tar.gz")
