--- a/libhello/test/CMakeLists.txt
+++ b/libhello/test/CMakeLists.txt
@@ -1,16 +1,28 @@
 ###############################################################################
 # Find catch2 testing framework
 ###############################################################################
-find_package(Catch2 REQUIRED)
-
-# Set test sources
-set(sources main.cpp)
+find_package(GTest REQUIRED)
 
 # Add test executable
-add_executable(mytest ${sources})
+add_executable(hello_test hello_test.cpp)
 
 # Link test with libraries
-target_link_libraries(mytest libhello Catch2::Catch2)
+target_link_libraries(hello_test 
+    PRIVATE libhello
+    PRIVATE GTest::gtest_main
+)
 
 # Add test to ctest
-add_test(NAME test COMMAND mytest)
+add_test(NAME test_hello COMMAND hello_test)
+
+# Add test executable
+add_executable(hello_consumer_test hello_consumer_test.cpp)
+
+# Link test with libraries
+target_link_libraries(hello_consumer_test 
+    PRIVATE libhello
+    PRIVATE GTest::gtest_main
+)
+
+# Add test to ctest
+add_test(NAME test_consumer COMMAND hello_consumer_test)
